# simple-around-view-monitor

./: CMakeLists.txt  README.md
data/back/: camera_back_D.csv  camera_back_H.csv  camera_back_K.csv
data/front/: camera_front_D.csv  camera_front_H.csv  camera_front_K.csv
data/left/: camera_left_D.csv  camera_left_H.csv  camera_left_K.csv
data/right/: camera_right_D.csv  camera_right_H.csv  camera_right_K.csv
data/weights/: image.py
deprecated_code/: mask_generator.cpp  mask_generator.h
include/: camera_generator.h  circular_buffer.h  data_dir.h  debug_utils.h  mask_generator.h  parameter.h  streamer.h  thread_pool.h
src/: camera_generator.cpp  circular_buffer.cpp  data_dir.cpp  debug_utils.cpp  main.cpp  mask_generator.cpp  parameter.cpp  streamer.cpp
tools/: detect_corners.py
tools/ExtrinsicCalibration/: README.md  __init__.py  extrinsicCalib.ipynb  extrinsicCalib.py  photo.py  undistort.py  undistort_photo.py
tools/IntrinsicCalibration/: 480p_camera_back_D.npy  480p_camera_back_K.npy  480p_camera_front_D.npy  480p_camera_front_K.npy  480p_camera_left_D.npy  480p_camera_left_K.npy  480p_camera_right_D.npy  480p_camera_right_K.npy
